# AgentDiscussion

./: .gitignore  CLAUDE.md  PLAN.md  README.md  config.yaml  config_template.yaml  main.py  pyproject.toml  research.md
.claude/: settings.json
agent_discussion/core/: api_validator.py  config.py  exceptions.py  files.py  logging_config.py  models.py  resume_manager.py
agent_discussion/discussions/: engine.py  service.py
agent_discussion/pages/: 1_Setup.py  2_Discussion.py  4_History.py
agent_discussion/personas/: manager.py  service.py
agent_discussion/ui/: components.py
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/plans/: core-application-functional-design-plan.md  core-application-nfr-design-plan.md  core-application-nfr-requirements-plan.md
aidlc-docs/inception/application-design/: application-design.md  component-dependency.md  component-methods.md  components.md  services.md  unit-of-work-dependency.md  unit-of-work-story-map.md  unit-of-work.md
aidlc-docs/inception/plans/: application-design-plan.md  execution-plan.md  story-generation-plan.md  (+3 more)
data/discussions/: 082c0908-8b1e-4402-b6a6-f801ca490bfc.json  2101dd5f-09dd-4d1f-bc32-8f12015d10c1.json  30153338-4856-44d4-acf3-77e83d54f2f9.json  70c6a2de-52dd-4a80-a910-7e7e8c5e9886.json  8a83687b-8c08-46bf-a550-2d8d2f0509ff.json  cb6b45e0-c0aa-4c23-a4c5-134ca0617bb6.json
data/personas/: predefined.json
docs/spec/: feature-auth.md
exports/: AGIが生まれつつある現状を踏まえ_AIエンジニアは今後の人生をどのように歩んで_20260316_191325.md  株式会社エイシングってどう_イケてる__20260317_202754.md
pages/: 2_Discussion.py  3_Results.py
(+15 files in other folders)
